// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-announce #render should have assertive politeness 1`] = `
<gux-announce-beta aria-live="assertive" politeness="assertive">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce #render should have default politeness 1`] = `
<gux-announce-beta aria-live="polite">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce #render should have off politeness 1`] = `
<gux-announce-beta aria-live="off" politeness="off">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;

exports[`gux-announce #render should have polite politeness 1`] = `
<gux-announce-beta aria-live="polite" politeness="polite">
  <template shadowrootmode="open">
    <slot></slot>
    <div></div>
  </template>
  This is some text to read
</gux-announce-beta>
`;
